stylesheets/global.css
* {
  margin: 0;
  padding: 0;
  font-family: "Lato", sans-serif;
  color: white;
}
:root {
  --nav-height: 120px;
}
body {
  animation: fadeIn 0.3s ease;
  transition: all 0.5s ease;
  background-color: #1e1e1e;
}
body, html, main{
  overflow-x: hidden;
}
@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

main::-webkit-scrollbar,
html::-webkit-scrollbar,
body::-webkit-scrollbar {
  display: none;
}
a {
  text-decoration: none;
}

/* -- NAV SECTION --*/
nav img {
  width: 100px;
}
nav {
  display: flex;
  position: absolute;
  width: 100%;
  align-items: center;
  justify-content: space-between;
  min-height: 100px;
  background-color: transparent;
  z-index: 3;
}
.n-left{
  padding-left: 10px;
}
nav .n-middle {
  gap: 35px;
  display: flex;
}
.n-right{
  padding-right: 25px;
}
nav a {
  font-weight: 700;
  color: #c4c4c4;
}
.active{
  color: rgb(255, 255, 255);
}
.mobile-menu-icon {
  display: none;
}
.mobile-menu-icon svg {
  width: 45px;
  height: 45px;
  color: white;
  cursor: pointer;
}

@media (max-width: 768px) {
  .mobile-menu-icon {
    display: block;
    padding-right: 20px;
  }
  .n-middle a, .n-right a{
    display: none;
  }
  .mobile-menu {
    display: none;
    position: absolute;
    top: 70%;
    right: 0;
    background: #1e1e1e;
    flex-direction: column;
    padding: 20px;
    gap: 15px;
    border-radius: 6px;
    margin-right: 4%;
    font-size: 1.4em;
  }
  .mobile-menu.open {
    display: flex;
  }
}

/* Hide mobile menu on desktop */
.mobile-menu {
  display: none;
}
/* -- FOOTER -- */
footer {
  background-color: #e7e7e7;
}
#svg3 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 100;
  filter: drop-shadow(0 4px 10px #1e1e1e);
}
.footer-container {
  position: relative;
  min-height: 600px;
  background-color: #e7e7e7;
  z-index: 1;
  display: flex;
  flex-direction: column;
}
footer p,
footer a {
  color: #000;
}
.footer-inner-container {
  display: flex;
  align-items: flex-start;
  justify-content: left;
  padding: 50px 10%;
  z-index: 999;
}
.footer-wrapper {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 100px 10px;
}
.footer-wrapper p {
  font-weight: 700;
  margin-bottom: 10px;
}
.footer-wrapper a {
  cursor: pointer;
}
#fw3 {
  margin-left: auto;
}
.footer-bottom {
  display: flex;
  gap: 30%;
  align-items: center;
  justify-content: center;
  margin-top: auto;
  margin-bottom: 20px;
}
#footer-img {
  width: 440px;
  padding: 0;
  position: absolute;
  top: 25%;
  left: 50%;
  transform: translateX(-50%);
}

